# AtChem2

./: .codecov.yml  .gitignore  .travis.yml  CHANGELOG.md  CITATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README  README.md  RO2.fac  atchem.f  atchem.f90  atmosphereFunctions.f90  configFunctions.f90  constraintFunctions.f90  conversionFunctions.f  conversionFunctions.f90  dataStructures.f  dataStructures.f90  dilute.py  entrypoint.sh  facsimileFunctions.f90  inputFunctions.f90  install.sh  instantaneousRatesFunctions.f  instantaneousRatesFunctions.f90  interpolationFunctions.f  interpolationFunctions.f90  mcm_subset.fac  mechanism-rates.f  mechanism-rates.f90  mechanism.fac  modelConfigFunctions.f  modelConfigFunctions.f90  outputFunctions.f  outputFunctions.f90  parameterModules.f90  parameter_modules.f90  (+11 more)
.github/: codecov.yml
.github/workflows/: ci.yml  test.yml  tex-build.yml  tex-push.yml  tex-upload.yml  tex.yml
dep/FortranParser-2.0.3/: CMakeLists.txt  LICENSE  README.md
dep/FortranParser-2.0.3/cmake/: GNU_Fortran_Flags.cmake  General_rpath_config.cmake  Intel_Fortran_Flags.cmake  fortranparser_meta_info.cmake.in  fortranparser_meta_info.nl.in
dep/FortranParser-2.0.3/src/: FortranParser.f90  FortranParser_parameters.f90
dep/FortranParser-2.0.3/src/tests/: .testfp.f90.swp  coeffs.txt  fortranparser.mod  fortranparser_parameters.mod  generic.txt  testatchem.f90  testfp  testfp.f90  testfp1.f90  testfp2.f90  testfp3  testfp3.f90  testfp3_array.f90  testfp4.f90  testfp5.f90
doc/: .gitignore  1.-Installation.md  1.-Installation.tex  1.1-Dependencies.md  1.1-Dependencies.tex  1.2-Model-Structure.md  1.2-Model-Structure.tex  2.-Model-Setup-and-Execution.md  2.-Model-Setup-and-Execution.tex  2.1-Chemical-Mechanism.md  2.2-Model-Parameters.md  2.2-Model-Parameters.tex  2.3-Solver-Parameters.md  2.3-Solver-Parameters.tex  2.4-Environment-Variables.md  2.4-Environment-Variables.tex  2.5-Photolysis-Rates-and-JFAC.md  2.6-Config-Files.md  2.6-Config-Files.tex  2.7-Constraints.md  2.7-Constraints.tex  2.8-Tools.md  3.-Model-Development.md  3.1-Test-Suite.md  3.1-Test-Suite.tex  3.2-Style-Guide.md  Acknowledgements-and-Credits.md  AtChem2-Manual.tex  AtChem2.tex  Chemical-Mechanism.tex  Config-Files.tex  Constraints.tex  Credits.tex  Dependencies.tex  Environment-Variables.tex  Home.md  Home.tex  Installation.tex  Introduction.tex  Model-Development.tex  (+9 more)
doc/figures/: .gitignore
doc/latex/: .gitignore  AtChem2-Manual.tex  Credits.tex  Development.tex  Execution.tex  Installation.tex  Introduction.tex  Model-Structure.tex  References.bib  Setup.tex  chemical-mechanism.tex  config-files.tex  constraints.tex  credits.tex  dependencies.tex  environment-variables.tex  installation.tex  make_pdf.sh  model-parameters.tex  model-setup-execution.tex  photolysis-rates.tex  solver-parameters.tex  style-guide.tex  test-suite.tex  tools.tex
docker/: entrypoint.sh  install.sh
mcm/: INFO.md  RO2listv3.3.1  mechanism_skel.fac  mechanism_skel.kpp  peroxy-radicals_v3.1  peroxy-radicals_v3.2  peroxy-radicals_v3.3.1  peroxy_v31  photolysis-rates_v3.1
mechanism/: .gitignore
model/: .gitignore  mechanism.fac
model/configuration/: .gitignore  customRateFuncs.f90  environmentVariables.config  initialConcentrations.config  model.parameters  outputSpecies.config  photolysisConstant.config
model/modelConfiguration/: initialConcentrations.config  model.parameters
model/output/: .gitignore
modelConfiguration/: .gitignore  concentrationOutput.config  environmentVariables.config  extraOutputSubroutines.f  extraOutputSubroutines.f90  initialConcentrations.config  lossRatesOutput.config  model.parameters  photolysisRates.config  solver.parameters
src/: FortranParser.f90  argparse.f90  atchem.f90  atchem2.f90  atmosphereFunctions.f90  cli.f90  configFunctions.f90  constraintFunctions.f90  dataStructures.f90  inputFunctions.f90  interpolationFunctions.f90  mechanism.f90  outputFunctions.f90  parameterModules.f90  solarFunctions.f90  solverFunctions.f90  testatchem.f90
test/: run_indent_test.sh  run_style_test.sh  run_tests.sh
tests/: .gitignore  makefile.tests  python_format_test.sh  run_indent_test.sh  run_model_tests.sh  run_style_test.sh  run_tests.sh  testing.mk
tools/: .gitignore  Makefile  RO2list  build.sh  facsimileToFortranMechanismConverter.py  fix_fac.py  fix_indent.py  fix_mechanism_fac.py  fix_style.py  fruit_generator.rb  make_manual_pdf.sh  mcm_example.fac  mech_converter.py  mechanism-rate-coefficients.f90  multiplot.py  plot-atchem.r  plot-atchem2.py  plot-atchem2.r  run.sh  run_atchem.py  setup_atchem.py  setup_atchem2.py  update_version_number.sh  version.sh
travis/: cache_homebrew  download_homebrew  fruit_generator.rb  install_cvode_linux.sh  install_cvode_osx.sh  run_format_test.sh  run_indent_test.sh  run_style_test.sh  run_tests.sh  test_runner.sh
(+1188 files in other folders)
